# VideoColorsBarcode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
VideoColorsBarcode/: app.py  colors_barcode.py  utils.py
