[tool.poetry]
name = "videocolorsbarcode"
version = "0.1.0"
description = ""
authors = ["Federico Lanzani <federico.lanzani@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
opencv-python-headless = "^4.7.0.72"
colorthief = "^0.2.1"
tqdm = "^4.65.0"
pillow = "^9.5.0"
pandas = "^1.5.2"
numpy = "^1.24.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
